# qa_stand_login

./: Dockerfile  README.md  app_dev.py  app_prod.py  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: build_and_deploy.yml  deploy.yml  deploy_ec2.yml  publish.yml
src/: flask_app.py
src/aws/: secrets_manager.py
src/templates/: base.html  docs.html  login.html  login_failed.html  user_details.html
